<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.Register">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <Button
            android:id="@+id/registerBtnM"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:background="@color/greenAccent"
            android:text="REGISTER"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/firstNameR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/surnameR"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="FIRST NAME"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColorHint="@color/greenAccent" />

        <EditText
            android:id="@+id/passR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/passConfirmR"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/greenAccent" />

        <EditText
            android:id="@+id/passConfirmR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/registerBtnM"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="CONFIRM PASSWORD"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/greenAccent" />

        <EditText
            android:id="@+id/emailR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/passR"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="EMAIL ADDRESS"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColorHint="@color/greenAccent" />

        <EditText
            android:id="@+id/surnameR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/emailR"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="SURNAME"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColorHint="@color/greenAccent" />

        <ImageView
            android:id="@+id/logoR"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/logo_old"
            android:layout_above="@+id/firstNameR"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
