<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hiddenEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.example.chris.strokere.Account">

    <include
...
        android:layout_alignStart="@+id/pPassword"
        android:onClick="aReauth"
        android:text="Confirm"
        android:visibility="invisible" />

    <Button
        android:id="@+id/delAccBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pConfirmPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        android:onClick="delAccount"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Delete Account"
        android:visibility="visible" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pPassword"
        android:layout_alignStart="@+id/pEmail"
        android:layout_below="@+id/logoutBtn"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:visibility="visible" />

    <Button
...
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:onClick="logout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Logout" />

</android.widget.RelativeLayout>

