...

        <Button
            android:id="@+id/btnWorkRemS"
            style="@style/standard_button"
            android:layout_height="120dp"
            android:background="@drawable/standard_button_green"
            android:layout_above="@+id/btnAccountS"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:onClick="openWorkRem"
            android:text="Workout Reminders"
            android:textColor="@android:color/white"
...
            android:background="@drawable/standard_button_green"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:onClick="openAccount"
            android:text="My Account"
            app:layout_constraintTop_toBottomOf="@+id/btnWorkRemS" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

