...
            android:background="@drawable/standard_button_green"
            android:text="Exercise list" />

        <Button
            android:id="@+id/ProgressBtn"
            style="@style/standard_button"
            android:layout_above="@+id/Settings"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_green"
            android:text="Progress"
            app:layout_constraintTop_toBottomOf="@+id/ExerciseListBtn" />
...
